# lighthouse

./: DATABASE-ARCHITECTURE-ANALYSIS.md  DATABASE-COMPARISON-VISUAL.md  DATABASE-DECISION-SUMMARY.md  DEPLOYMENT-STEP-BY-STEP.md  README-DATABASE-ANALYSIS.md  README-OLD.md  README.md  README.md.bak  STANDALONE-EXTRACTION-GUIDE.md  TIMESCALEDB-AWS-DEPLOYMENT-ARCHITECTURE.md  TIMESCALEDB-DEPLOYMENT-SUMMARY.md  TIMESCALEDB-IMPLEMENTATION-GUIDE.md  docker-compose.yml  lighthouse-architecture-diagram.md  lighthouse-master-plan.md  lighthouse-quick-reference.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/api/: agent_card.rs  health.rs  metrics.rs  mod.rs  subscribe.rs
backend/src/database/: mod.rs
backend/src/monitors/: http.rs  mod.rs
backend/src/scheduler/: mod.rs
docs/archive/: lighthouse-vs-watchtower.md
terraform/: DEPLOYMENT-GUIDE.md  README.md  cost-calculator.sh
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/timescaledb-ec2/: README.md  main.tf  outputs.tf  user_data.sh  variables.tf
workers/: requirements.txt
